added article review

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -38,7 +38,7 @@ urlcolor: blue
 
 **Networked Learning in Online Communities:**
 
-* \* *Social media:* online learning environments, affinity spaces, learning ecologies
+* \* *Social media:* online learning environments, affinity spaces, learning ecology
 * \* *Educational data mining:* digital traces, big data
 * \* *Learning analytics:* social network analysis, discourse analysis, natural language processing
 
@@ -359,12 +359,12 @@ Romero-Hall, E., Arslan-Ari, I., Gentry, W., Greenhalgh, S., Jung, Y. J., Stefan
 
 # Service
 
-## Journal Article Reviews (7)
+## Journal Article Reviews (8)
 
+* \* *Internet and Higher Education* (3) \hfill 2019-2021
 * \* *American Journal of Education* (2) \hfill 2019-2020
 * \* *Computers and Education* (1) \hfill 2021
 * \* *Journal of Information Technology and Politics* (1) \hfill 2020
-* \* *Internet and Higher Education* (2) \hfill 2019
 * \* *Learning, Media and Technology* (1), with Dr. Christine Greenhow, faculty reviewer \hfill 2016
 
 ## Service in Professional Organizations
