--- a/cv.Rmd
+++ b/cv.Rmd
@@ -384,8 +384,8 @@ Romero-Hall, E., Arslan-Ari, I., Gentry, W., Greenhalgh, S., Jung, Y. J., Stefan
 **Society for Information Technology and Teacher Education (SITE)**
 
 * \* *Co-Chair*, Social Media SIG \hfill 2019-2021
+* \* *Conference Proposal Reviewer* \hfill 2020-2021
 * \* *Planning Committee Member*, SITE Interactive Conference \hfill 2020
-* \* *Conference Proposal Reviewer* \hfill 2020
 * \* *Graduate Student Intern*, Social Media SIG \hfill 2018-2019
 
 **Passion Talks Conference (Google HQ, Mountain View CA)**
