added guest lecture

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -300,7 +300,9 @@ Michigan State University, Council of Graduate Students
 * \* Students playfully explore Google Apps, course management systems, screencasting tools, and file management systems.
 * \* The semester-long project is to design a curriculum for an *online course module* consisting of 3-5 interconnected lessons, which may include training sessions or non-traditional courses.
 
-## Instructional Activities & Workshops (15)
+## Instructional Activities & Workshops (16)
+
+Rosenberg, J. M., & **Staudt Willet**, K. B. (2021, April). *Programmatically accessing social media (especially Twitter) data* [Guest lecture for doctoral course]. CEP 991B: Social Networks II: Application of Analyses and Methods, Michigan State University: East Lansing, MI. https://bit.ly/twitter-sna
 
 Budhrani, K., Ross, K., Muljana, P., Dyer, R., Jones, M., & **Staudt Willet**, K. B. (2020, November). *Factors influencing doctoral students’ perseverance in online instructional technology programs* [Panel]. Association for Educational Communications and Technology (AECT) International Convention 2020, Online.
 
@@ -347,11 +349,12 @@ Romero-Hall, E., Arslan-Ari, I., Gentry, W., Greenhalgh, S., Jung, Y. J., Stefan
 
 # Service
 
-## Journal Article Reviews (8)
+## Journal Article Reviews (9)
 
-* \* *Internet and Higher Education* (3) \hfill 2019-2021
+* \* *AERA Open* (1) \hfill 2021
 * \* *American Journal of Education* (2) \hfill 2019-2020
 * \* *Computers and Education* (1) \hfill 2021
+* \* *Internet and Higher Education* (3) \hfill 2019-2021
 * \* *Journal of Information Technology and Politics* (1) \hfill 2020
 * \* *Learning, Media and Technology* (1), with Dr. Christine Greenhow, faculty reviewer \hfill 2016
 
@@ -365,7 +368,7 @@ Romero-Hall, E., Arslan-Ari, I., Gentry, W., Greenhalgh, S., Jung, Y. J., Stefan
 
 * \* *Communications Officer*, Research & Theory Division \hfill 2020-2021
 * \* *Secretary*, Research & Theory Division \hfill 2019-2020
-* \* *Conference Proposal Reviewer* \hfill 2019-2020
+* \* *Conference Proposal Reviewer* \hfill 2019-2021
 * \* *Graduate Student Representative*, Research & Theory Division \hfill 2018-2019
 * \* *Webinar Team Leader*, Graduate Student Association \hfill 2018-2019
 
