added dissertation ProQuest info

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -46,8 +46,8 @@ urlcolor: blue
 
 **Ph.D.**, Educational Psychology & Educational Technology \hfill 2021
 
-  * \* Dissertation: *"I filled a lot of gaps": How and why early career teachers expand induction support systems with social media* (defended March 19, 2021)
-  * \* Committee: Matthew Koehler, Christine Greenhow, Ralph Putnam, Gail Richmond
+  * \* Staudt Willet, K. B. (2021). *"I filled a lot of gaps": How and why early career teachers expand induction support systems with social media* (Publication No. 28414983) [Doctoral dissertation, Michigan State University]. ProQuest Dissertations & Theses Global.
+  * \* Dissertation committee: Matthew Koehler, Christine Greenhow, Ralph Putnam, Gail Richmond
 
 **M.A.**, Educational Technology \hfill 2015  
 **Graduate Certificate**, Serious Game Design and Research \hfill 2014
