--- a/cv.Rmd
+++ b/cv.Rmd
@@ -62,9 +62,9 @@ urlcolor: blue
 
 ## Peer-Reviewed Journal Articles (15)
 
-Carpenter, J. P., & **Staudt Willet**, K. B. (accepted). The teachers’ lounge and the debate hall: Anonymous self-directed learning in two teaching-related subreddits. *Teaching and Teacher Education*.
+Carpenter, J. P., & **Staudt Willet**, K. B. (2021). The teachers’ lounge and the debate hall: Anonymous self-directed learning in two teaching-related subreddits. *Teaching and Teacher Education, 104*, 103371. https://doi.org/10.1016/j.tate.2021.103371
 
-Greenhow, C. M., **Staudt Willet**, K. B., & Galvin, S. (in press). Inquiring tweets want to know: #Edchat supports for #RemoteTeaching during COVID-19. *British Journal of Educational Technology*. https://doi.org/10.1111/bjet.13097
+Greenhow, C. M., **Staudt Willet**, K. B., & Galvin, S. (2021). Inquiring tweets want to know: #Edchat supports for #RemoteTeaching during COVID-19. *British Journal of Educational Technology*. https://doi.org/10.1111/bjet.13097
 
 **Staudt Willet**, K. B., & Carpenter, J. P. (2021). A tale of two subreddits: Change and continuity in teaching-related online spaces. *British Journal of Educational Technology, 52*(2), 714-733. https://doi.org/10.1111/bjet.13051
 
