--- a/cv.Rmd
+++ b/cv.Rmd
@@ -70,23 +70,23 @@ urlcolor: blue
 
 12\. Carpenter, J. P., **Staudt Willet**, K. B., Koehler, M. J., & Greenhalgh, S. P. (2020). Spam and educators’ Twitter use: Methodological considerations and challenges. *TechTrends, 64*, 460-469. https://doi.org/10.1007/s11528-019-00466-3
 
-11\. Greenhalgh, S. P., Rosenberg, J. M., **Staudt Willet**, K. B., Koehler, M. J., & Akcaoglu, M. (2020). Identifying multiple learning spaces within a single teacher-focused Twitter hashtag. *Computers and Education*. https://doi.org/10.1016/j.compedu.2020.103809
+11\. Greenhalgh, S. P., Rosenberg, J. M., **Staudt Willet**, K. B., Koehler, M. J., & Akcaoglu, M. (2020). Identifying multiple learning spaces within a single teacher-focused Twitter hashtag. *Computers and Education, 148*, 103809. https://doi.org/10.1016/j.compedu.2020.103809
 
-10\. Greenhow, C., Lewin, C., & **Staudt Willet**, K. B. (2020). The educational response to COVID-19 across two countries: A critical examination of initial digital pedagogy adoption. *Technology, Pedagogy and Education*. https://doi.org/10.1080/1475939X.2020.1866654
+10\. Greenhow, C., Lewin, C., & **Staudt Willet**, K. B. (2020). The educational response to COVID-19 across two countries: A critical examination of initial digital pedagogy adoption. *Technology, Pedagogy and Education, 30*(1), 7-25. https://doi.org/10.1080/1475939X.2020.1866654
 
-9\. Rosenberg, J. M., & **Staudt Willet**, K. B. (2020). Balancing privacy and open science in the context of COVID-19: A response to Ifenthaler & Schumacher (2016). *Educational Technology Research and Development*. https://doi.org/10.1007/s11423-020-09860-8
+9\. Rosenberg, J. M., & **Staudt Willet**, K. B. (2020). Balancing privacy and open science in the context of COVID-19: A response to Ifenthaler & Schumacher (2016). *Educational Technology Research and Development, 69*, 347–351. https://doi.org/10.1007/s11423-020-09860-8
 
-8\. **Staudt Willet**, K. B., & Carpenter, J. P. (2020). Teachers on Reddit? Exploring contributions and interactions in four teaching-related subreddits. *Journal of Research on Technology in Education, 52*, 216-233. https://doi.org/10.1080/15391523.2020.1722978
+8\. **Staudt Willet**, K. B., & Carpenter, J. P. (2020). Teachers on Reddit? Exploring contributions and interactions in four teaching-related subreddits. *Journal of Research on Technology in Education, 52*(2), 216-233. https://doi.org/10.1080/15391523.2020.1722978
 
 7\. Greenhalgh, S. P., **Staudt Willet**, K. B., & Koehler, M. J. (2019). Approaches to Mormon identity and practice in the #ldsconf Twitter hashtag. *Journal of Media and Religion, 18*(4), 122-133. https://doi.org/10.1080/15348423.2019.1696121
 
 6\. Greenhow, C. M., Galvin, S., & **Staudt Willet**, K. B. (2019). What should be the role of social media in education? *Policy Insights from the Behavioral and Brain Sciences, 6*(2), 178-185. https://doi.org/10.1177/2372732219865290
 
-5\. Greenhow, C. M., Gleason, B., & **Staudt Willet**, K. B. (2019). Social scholarship revisited: Changing scholarly practices in the age of social media. *British Journal of Educational Technology, 50*, 987-1004. https://doi.org/10.1111/bjet.12772
+5\. Greenhow, C. M., Gleason, B., & **Staudt Willet**, K. B. (2019). Social scholarship revisited: Changing scholarly practices in the age of social media. *British Journal of Educational Technology, 50*(3), 987-1004. https://doi.org/10.1111/bjet.12772
 
 4\. Krutka, D. G., Heath, M. K., & **Staudt Willet**, K. B. (2019). Foregrounding technoethics: Toward critical perspectives in technology and teacher education. *Journal of Technology and Teacher Education, 27*(4), 555-574. http://learntechlib.org/p/208235/
 
-3\. **Staudt Willet**, K. B. (2019). Revisiting how and why educators use Twitter: Tweet types and purposes in #Edchat. *Journal of Research on Technology in Education, 51*, 273-289. https://doi.org/10.1080/15391523.2019.1611507
+3\. **Staudt Willet**, K. B. (2019). Revisiting how and why educators use Twitter: Tweet types and purposes in #Edchat. *Journal of Research on Technology in Education, 51*(3), 273-289. https://doi.org/10.1080/15391523.2019.1611507
 
 2\. Greenhalgh, S. P., **Staudt Willet**, K. B., Rosenberg, J. M., & Koehler, M. J. (2018). Tweet, and we shall find: Using digital methods to locate participants in educational hashtags. *TechTrends, 62*, 501-508. https://doi.org/10.1007/s11528-018-0313-6
 
@@ -313,6 +313,8 @@ This course focuses on the evaluation of training and instruction through a syst
 * \* The semester-long project is to design a curriculum for an *online course module* consisting of 3-5 interconnected lessons, which may include training sessions or non-traditional courses.
 
 ## Instructional Activities & Workshops
+
+17\. Caines, A., Heath, M., Krutka, D., & **Staudt Willet**, K. B. (2021, May). *Black Mirror mad libs: Interrogating technology through dystopian storytelling* [Webinar]. Equity Unbound, The American University in Cairo: Cairo, Egypt. https://tinyurl.com/BlackMirrorTech
 
 16\. Rosenberg, J. M., & **Staudt Willet**, K. B. (2021, April). *Programmatically accessing social media (especially Twitter) data* [Guest lecture for doctoral course]. CEP 991B: Social Networks II: Application of Analyses and Methods, Michigan State University: East Lansing, MI. https://bit.ly/twitter-sna
 
