added AECT 2021 presentations

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -136,6 +136,12 @@ urlcolor: blue
 
 ## Peer-Reviewed Conference Presentations
 
+29\. Dennen, V., Mitchell, A., **Staudt Willet**, K. B., & Kent, H. (2021, November). *Using social network analysis to explore interests, collaborations, and needs in an academic community* [Paper session]. Association for Educational Communications and Technology (AECT) International Convention 2021, Chicago, IL.
+
+28\. Muljana, P., **Staudt Willet**, K. B., & Luo, T. (2021, November). *Asking questions, seeking advice, and supporting one another: Higher education professionals on Reddit* [Paper session]. Association for Educational Communications and Technology (AECT) International Convention 2021, Chicago, IL.
+
+27\. **Staudt Willet**, K. B. (2021, November). *Build-your-own support systems: Identity-agency and professional learning with social media* [Paper session]. Association for Educational Communications and Technology (AECT) International Convention 2021, Chicago, IL.
+
 26\. Rosenberg, J. M., Galas, E., & **Staudt Willet**, K. B. (2021, June). *Who are the data scientists in education? An investigation of the identities and work of individuals in diverse roles* [Poster session]. Annual Meeting of the International Society of the Learning Sciences (ISLS). 
 
 25\. Carpenter, J. P., & **Staudt Willet**, K. B. (2021, April). *Self-directed educator learning on Reddit: Comparing and contrasting two teaching-related subreddits* [Paper session]. American Educational Research Association (AERA) Annual Meeting 2021, Online.
@@ -272,7 +278,7 @@ MSU AT&T Faculty-Staff Annual Competition in Instructional Technology
 
 ## Courses Taught, Florida State University
 
-**Learning and Web Analytics** (Doctoral, online, 1x, 2021)
+**Learning & Web Analytics** (Doctoral, online, 1x, 2021)
 
 This course addresses the collection and use of data for decision making and assessment in learning and human performance contexts. Students will get hands-on experience with small data sets and will learn how big data sets are collected and used. The course will explore the role that analytics plays in education and related fields, identify the types of questions that might be answered via both quantitative and qualitative analytics, and engage in analytic- related problem solving. This course will examine case studies and provide students with practice using a variety of tools and services that can help them collect and analyze learning and web data. There are no pre-requisites, and although data will be used, prior experience with statistics or research design is not necessary.
 
@@ -307,6 +313,8 @@ This course focuses on the evaluation of training and instruction through a syst
 * \* The semester-long project is to design a curriculum for an *online course module* consisting of 3-5 interconnected lessons, which may include training sessions or non-traditional courses.
 
 ## Instructional Activities & Workshops
+
+18\. Bagdy, L., Arrington, T. L., Bong, J. Y., Moore, A., & **Staudt Willet**, K. B. (2021, November). *Qualifications and duties for IDT faculty: A job posting analysis and panel discussion* [Panel]. Association for Educational Communications and Technology (AECT) International Convention 2021, Chicago, IL.
 
 17\. Caines, A., Heath, M., Krutka, D., & **Staudt Willet**, K. B. (2021, May). *Black Mirror mad libs: Interrogating technology through dystopian storytelling* [Webinar]. Equity Unbound, The American University in Cairo: Cairo, Egypt. https://tinyurl.com/BlackMirrorTech
 
@@ -357,14 +365,16 @@ This course focuses on the evaluation of training and instruction through a syst
 
 # Service
 
-## Journal Article Reviews (11)
+## Journal Article Reviews (13)
 
 * \* *AERA Open* (1) \hfill 2021
 * \* *American Journal of Education* (2) \hfill 2019-2020
 * \* *Computers and Education* (2) \hfill 2021
 * \* *Internet and Higher Education* (3) \hfill 2019-2021
+* \* *Journal of Computer Assisted Learning* (1) \hfill 2021
 * \* *Journal of Information Technology and Politics* (1) \hfill 2020
 * \* *Learning, Media and Technology* (1) \hfill 2016
+* \* *Teaching and Teacher Education* (1) \hfill 2021
 * \* *TechTrends* (1) \hfill 2021
 
 ## Service in Professional Organizations
@@ -526,5 +536,7 @@ Workshop Certificate – The Thiagi Group at NASAGA \hfill Columbus OH
 **Society for Information Technology & Teacher Education (SITE)**
 
 * \* *Social Media SIG*
+
+**Society for Learning Analytics Research (SoLAR)**
 
 ---
