put end date to BIG

--- a/cv.Rmd
+++ b/cv.Rmd
@@ -420,7 +420,7 @@ This course focuses on the evaluation of training and instruction through a syst
 **Assistant Professor** \hfill 2021-present  
 Florida State University \hfill Tallahassee FL
 
-**Executive Coach** \hfill 2020-present  
+**Executive Coach** \hfill 2020-2021  
 Black in Gaming \hfill United States
 
 * \* Trained and mentored members of the core leadership team
